--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="sherif.jpeg" alt="Sherif Profile Picture"></td>
+      <td><img src="image/sherif.jpeg" alt="Sherif Profile Picture"></td>
       <td><h1>Sherif Elbialy</h1>
       <p><em>I'm a <strong>Software Developer</strong></em></p>
       <p>I love Amany and can't live without her</p>
